Avro Change Log

Trunk (not yet released)

  NEW FEATURES

    AVRO-1555.  C#: Add support for RPC over HTTP. (Dmitry Kovalev via cutting)

    AVRO-834. Java: Data File corruption recovery tool.
    (scottcarey and tomwhite)

  OPTIMIZATIONS

  IMPROVEMENTS

    AVRO-843. C#: Change Visual Studio project files to specify .NET 3.5.
    (Dmitry Kovalev via cutting)

    AVRO-1585. Java: Deprecate Jackson classes in public API. (tomwhite)

    AVRO-1681. Improve generated JavaDocs.
    (Charles Gariépy-Ikeson via tomwhite)

  BUG FIXES

    AVRO-1553. Java: MapReduce never uses MapOutputValueSchema (tomwhite)

    AVRO-1544. Java: Fix GenericData#validate for unions with null.
    (Matthew Hayes via cutting)

    AVRO-1489. Java: Avro fails to build with OpenJDK 8. (Ricardo Arguello via
    tomwhite)

	AVRO-1596. Java: Cannot read past corrupted block in Avro data file.
	(tomwhite)

    AVRO-1813: Incorrect link to build instructions in Java Getting Started (Pietro Menna via gabor)

    AVRO-1688. Ruby test_union(TestIO) is failing. (tomwhite)

    AVRO-1782. Ruby: Fix unit test failures in new versions of Ruby. (martinkl)

    AVRO-1775. Ruby: Use test-unit gem for running tests. (martinkl)

    AVRO-1772. Ruby: load error in rubygem when loading schema normalization.
    (blue and martinkl via tomwhite)

    AVRO-1729: Ruby: Add LICENSE and NOTICE to ruby gems. (blue)

    AVRO-1732: C++: Add LICENSE and NOTICE to binary distribution. (blue)

    AVRO-1733: C#: Add LICENSE and NOTICE to binary distribution. (blue)

    AVRO-1731: C: Add LICENSE and NOTICE to binary distribution. (blue)

    AVRO-1735: Perl: Add LICENSE and NOTICE to distribution. (blue)

    AVRO-1736: PHP: Add LICENSE and NOTICE to distribution. (blue)

    AVRO-1730: Python 2, 3: Add LICENSE and NOTICE to distribution. (blue)

    AVRO-1722: Update root LICENSE.txt and NOTICE.txt. (blue)

    AVRO-1728: Java: Add LICENSE and NOTICE files to jars. (blue)
